# ptc-depth

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: default.yaml
cpp/: CMakeLists.txt
cpp/bindings/: binding_utils.hpp  bindings_main.cpp  ptc_depth_bindings.cpp
cpp/include/ptc_depth/: bayesian_fusion.hpp  config.hpp  depth_warp.hpp  motion_field.hpp  ptc_depth.hpp  scale_estimation.hpp  triangulation.hpp  types.hpp  utils.hpp
cpp/src/: bayesian_fusion.cpp  depth_warp.cpp  motion_field.cpp  ptc_depth.cpp  scale_estimation.cpp  triangulation.cpp
examples/: download_sample.py  visualize_sample.py
ptc_depth/: __init__.py  segmentation.py
